--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,12 +21,12 @@ services:
     image: mariadb
     restart: always
     volumes:
-      - db:/var/lib/mysql
+      # - db:/var/lib/mysql
       # If you want to persist data on the host, comment the line above this one...
       # and uncomment the line under this one.
-      #- ./docker-compose/db/data:/var/lib/mysql:rw,delegated
+      - ./docker-compose/db/data:/var/lib/mysql:rw,delegated
     environment:
-      MYSQL_USER: crater
+      MYSQL_USER: superadmin
       MYSQL_PASSWORD: crater
       MYSQL_DATABASE: crater
       MYSQL_ROOT_PASSWORD: crater
@@ -39,15 +39,15 @@ services:
     image: nginx:1.17-alpine
     restart: unless-stopped
     ports:
-      - 80:80
+      - 9000:80
     volumes:
       - ./:/var/www
       - ./docker-compose/nginx:/etc/nginx/conf.d/
     networks:
       - crater
 
-volumes:
-  db:
+# volumes:
+#   db:
 
 networks:
   crater:
